main/default/objects/Survey_Field_Configuration__mdt/Survey_Field_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Stores the fields that can be displayed in a survey</description>
    <label>Survey Field Configuration</label>
    <pluralLabel>Survey Field Configurations</pluralLabel>
</CustomObject>