main/default/objects/Survey_Field_Configuration__mdt/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <inlineHelpText>Which side of the form would you like the field placed?</inlineHelpText>
    <label>Column</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
                <default>true</default>
                <label>Left</label>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>