main/default/objects/Survey_Field_Configuration__mdt/fields/Form_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Field_Type__c</fullName>
    <inlineHelpText>Corresponds which input type the field will be</inlineHelpText>
    <label>Form Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>