main/default/objects/Survey_Field_Configuration__mdt/fields/Is_Event_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field will only be available for selection if the survey is related to an event</inlineHelpText>
    <label>Is Event Field?</label>
    <type>Checkbox</type>
</CustomField>