main/default/objects/Survey_Field_Configuration__mdt/fields/Label_API__c.field-meta.xml
<CustomField>
    <fullName>Label_API__c</fullName>
    <inlineHelpText>Use this field to define the Custom Field API if the label of this field has to be dynamically taken from a custom field.</inlineHelpText>
    <label>Label API</label>
    <length>99</length>
    <type>Text</type>
</CustomField>