main/default/objects/Survey_Field_Configuration__mdt/fields/Message_when_Required__c.field-meta.xml
<CustomField>
    <fullName>Message_when_Required__c</fullName>
    <defaultValue>&quot;This field is required&quot;</defaultValue>
    <inlineHelpText>This message will be displayed when the field is required and is not filled-up</inlineHelpText>
    <label>Message when Required</label>
    <type>TextArea</type>
</CustomField>