main/default/objects/Survey_Field_Configuration__mdt/fields/Related_Object_Picklist_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Picklist_Field_API__c</fullName>
    <label>Related Object Picklist Field API</label>
    <length>90</length>
    <type>Text</type>
</CustomField>