main/default/objects/Survey_Field_Configuration__mdt/fields/Survey_Picklist_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Picklist_Field_API_Name__c</fullName>
    <label>Survey Picklist Field API Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>