main/default/objects/Survey_Field_Configuration__mdt/fields/Use_Survey_Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Use_Survey_Picklist_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Survey Picklist Field?</label>
    <type>Checkbox</type>
</CustomField>