main/default/objects/Survey_Field_Configuration__mdt/listViews/Survey_Fields_View_All.listView-meta.xml
<ListView>
    <fullName>Survey_Fields_View_All</fullName>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Is_Event_Field__c</columns>
    <columns>Column__c</columns>
    <columns>Form_Field_Type__c</columns>
    <columns>Actual_Field_Type__c</columns>
    <columns>Message_when_Required__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Survey Fields View All</label>
    <language>en_US</language>
</ListView>